# math5110-portfolio-linalg

./: .gitignore  README.md  pyproject.toml
docs/: PLANNING_BRIEF.md  proposal.md
lean/: PortfolioLinAlg.lean  README.md  lake-manifest.json  lakefile.lean
lean/PortfolioLinAlg/: Basic.lean  Covariance.lean  Eigen.lean  PSD.lean  PosDef2.lean  Scope.lean
python/: config.yaml
python/data/: metadata.json  returns.csv  returns.parquet
python/notebooks/: application.ipynb
python/src/portfolio_linalg/: __init__.py  comparison.py  config.py  covariance.py  fetch_data.py  frontier.py  interpret.py  kkt.py  plots.py  spectral.py
scripts/: run_all.py  summarize.py
